--- a/Notebooks/EDA.ipynb
+++ b/Notebooks/EDA.ipynb
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +730,38 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 12%|█▎        | 5/40 [00:01<00:12,  2.77it/s]"
+      "100%|██████████| 40/40 [00:14<00:00,  2.83it/s]\n",
+      "  0%|          | 0/40 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DONE!\n",
+      "AS\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 40/40 [00:15<00:00,  2.63it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DONE!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
